--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
 							<p>Website of recipes. HTML, CSS used.</p>
 							<a href="https://yl2337.wixsite.com/yummy-recipes" target="_blank" class="button">View Project</a>
 						</article>
+
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://pantrylist.vercel.app" target="_blank" class="project-link">
+								<img src="images/pantrylist.jpg" alt="Pantry List" class="image fit thumb" />
+								<h3>Pantry List</h3>
+							</a>
+							<p>An AI-assisted inventory management app. Users can add,delete,search for grocery items in the inventory database. Users can use webcam or mobile camera to take photos of items, and the app will automatically recognizes the items, prefill item name before user confirms addition.AI assistant can generate recipes using grocery items in inventory. Next.js, React, Firebase, GCP,OpenAI,Vercel,CI/CD implemented.</p>
+							<a href="https://pantrylist.vercel.app" target="_blank" class="button">View Project</a>
+							<a href="https://github.com/coderYL2337/pantrylist" class="button">Github</a>
+						</article>
 						
 					</div>
 				
@@ -139,11 +149,11 @@
 					<section id="three">
 						<h2>Skills</h2>
 						<ul>
-							<li>Back-End Development: Python • Java</li>
-							<li>Front-End Development: HTML • CSS • JavaScript • WordPress • Bootstrap</li>
-							<li>Database: SQL • MySQL</li>
+							<li>Back-End Development: Python • Java • Next.js</li>
+							<li>Front-End Development: HTML • CSS • JavaScript • React • WordPress • Bootstrap</li>
+							<li>Database: SQL • MySQL• Firebase</li>
 							<li>Mobile Development: Kotlin • Swift</li>
-							<li>Other: JSON • REST API • Git • GitHub • Linux • AWS • Android Studio • Xcode </li>
+							<li>Other: JSON • REST API • Git • GitHub • Linux • AWS • GCP • CI/CD • OpenAI • Android Studio • Xcode • Vercel </li>
 						  </ul>
 					</section>
 
