--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
 						</article>
 
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="https://pantrylist.vercel.app" target="_blank" class="project-link">
-								<img src="images/pantrylist.jpg" alt="Pantry List" class="image fit thumb" />
-								<h3>Pantry List</h3>
+							<a href="https://inventorytracker-ai.vercel.app/" target="_blank" class="project-link">
+								<img src="images/inventorytracker.png" alt="Inventory Tracker AI" class="image fit thumb" />
+								<h3>Inventory Tracker AI</h3>
 							</a>
-							<p>An AI-assisted inventory management app. Users can add,delete,search for grocery items in the inventory database. Users can use webcam or mobile camera to take photos of items, and the app will automatically recognizes the items, prefill item name before user confirms addition.AI assistant can generate recipes using grocery items in inventory. Next.js, React, Firebase, GCP,OpenAI,Vercel,CI/CD implemented.</p>
-							<a href="https://pantrylist.vercel.app" target="_blank" class="button">View Project</a>
-							<a href="https://github.com/coderYL2337/pantrylist" class="button">Github</a>
+							<p>An AI-assisted inventory management app. Users can add,delete,search for grocery items in the inventory database. Users can use webcam or mobile camera to take photos of items, and the app will automatically recognizes the items, prefill item name before user confirms addition.AI assistant can generate recipes using grocery items in inventory. Next.js, React, Firebase, Clerk, GCP,OpenAI,Vercel,CI/CD implemented.</p>
+							<a href="https://inventorytracker-ai.vercel.app/" target="_blank" class="button">View Project</a>
+							<a href="https://github.com/coderYL2337/inventorytracker" class="button">Github</a>
 						</article>
 						
 					</div>
