--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
 							<a href="https://inventorytracker-ai.vercel.app/" target="_blank" class="button">View Project</a>
 							<a href="https://github.com/coderYL2337/inventorytracker" class="button">Github</a>
 						</article>
+
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://chatsupport.csbot.online/" target="_blank" class="project-link">
+								<img src="images/chatsupport.png" alt="Chat Support AI" class="image fit thumb" />
+								<h3>Chat Support AI</h3>
+							</a>
+							<p>An AI-assisted customer service chatbot for questions about Starbucks. Online Starbucks data scraped and upserted to Pinecone for RAG. Log in is optional. SignedIn users can load or clear their chat history. OpenAI, Next.js, React, Firebase, Clerk, GCP,OpenAI,Vercel,CI/CD implemented.</p>
+							<a href="https://chatsupport.csbot.online/" target="_blank" class="button">View Project</a>
+							<a href="https://github.com/coderYL2337/chatsupport-ai" class="button">Github</a>
+						</article>
 						
 					</div>
 				
